# oz

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  TODO.md  docker-compose.yml  main.py  pyproject.toml
oz/: __init__.py  api.py  chat.py  embeddings.py  ingestion.py  vectordb.py
specs/: blog.json
static/: index.html
tests/: test_embeddings.py  test_main.py  test_vectordb.py
